--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/studentdb
-spring.datasource.username=postgres
-spring.datasource.password=oyo
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/studentdb
+#spring.datasource.username=postgres
+#spring.datasource.password=oyo
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.data.mongodb.database=user_db
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
